@@ -1,3 +1,7 @@
+Fri Mar 19 15:50:47 GMT 2004 (njh)
+----------------------------------
+  * libclamav/mbox.c:	Handle empty content-disposition headers
+
 Fri Mar 19 16:00:51 CET 2004 (tk)
 ---------------------------------
   * libclamav: small cosmetic fixes in format strings, also added some
